# RaylibCCardPlay

./: .gitignore  CMakeLists.txt  README.md
include/: card.h  card_pile.h  deck.h  gameplay.h  rendering.h
src/: card.c  card_pile.c  deck.c  gameplay.c  main.c  rendering.c
